# remote-work-productivity-analyzer

./: .gitignore  README.md
.github/workflows/: ci.yml
ProductivityAnalyzer/: .env.example  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  activity_log.db  activity_report.csv  docker-compose.yml  main.py  productivity.db  project_detail.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  style.qss
ProductivityAnalyzer/.github/workflows/: ci.yml
ProductivityAnalyzer/config/: __init__.py  constants.py  settings.py
ProductivityAnalyzer/database/: __init__.py  connection.py  models.py
ProductivityAnalyzer/database/migrations/: migration_001_initial_schema.py  migration_002_soft_deletes.py
ProductivityAnalyzer/database/repositories/: __init__.py  activity_repo.py  focus_settings_repo.py  goals_repo.py
ProductivityAnalyzer/docs/adr/: 001-use-pyqt5.md  002-postgresql.md  003-repository-pattern.md
ProductivityAnalyzer/modules/: database.py  reporting.py  tracker.py  ui.py
ProductivityAnalyzer/productivity-analyzer-env/: pyvenv.cfg
ProductivityAnalyzer/productivity-analyzer-env/Scripts/: activate  activate.bat
ProductivityAnalyzer/reporting/: __init__.py  report_generator.py
ProductivityAnalyzer/reporting/charts/: __init__.py  activity_chart.py  productivity_pie.py  trend_line.py
ProductivityAnalyzer/reporting/exporters/: __init__.py  csv_exporter.py  pdf_exporter.py
ProductivityAnalyzer/services/: __init__.py  llm_service.py  notification_service.py  productivity_scorer.py  suggestion_engine.py
ProductivityAnalyzer/services/integrations/: __init__.py  github_integration.py
ProductivityAnalyzer/tests/: conftest.py  test_database.py  test_focus_settings.py  test_reporting.py  test_tracker.py  test_ui.py
ProductivityAnalyzer/tests/test_database/: __init__.py  test_activity_repo.py  test_goals_repo.py
ProductivityAnalyzer/tests/test_integration/: test_full_workflow.py
ProductivityAnalyzer/tests/test_reporting/: __init__.py  test_report_generator.py
ProductivityAnalyzer/tests/test_tracking/: __init__.py  test_categorizer.py  test_website_blocker.py
ProductivityAnalyzer/tests/test_ui/: test_e2e_widgets.py  test_validators.py
ProductivityAnalyzer/tracking/: __init__.py  activity_tracker.py  categorizer.py  focus_mode.py  website_blocker.py
ProductivityAnalyzer/ui/: __init__.py  main_window.py
ProductivityAnalyzer/ui/styles/: dark_theme.qss  style.qss
ProductivityAnalyzer/ui/widgets/: activity_log_widget.py  dashboard_widget.py  focus_mode_widget.py  goals_widget.py  reports_widget.py  settings_widget.py
ProductivityAnalyzer/utils/: __init__.py  logger.py  platform_utils.py  validators.py
